--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>Expense Tracker</h1>
+  <h1>Sujan Gautam</h1>
 
   <form action="/add-expense" method="POST">
     <label for="category">Category:</label>
